 - Added support for questions with sound.
 - Added support for questions with more than one correct and two incorrect
   answers (three of them are randomly choosen at runtime).
 - Decreased the time it takes for the wheel to switch to a question, when
   the game is muted.
 - Add an option (--preload) to load everything at startup.

Bug Fixes:
 - Fixed the --database option; it did not work previously.
 - Fixed file permissions so that the installation script works for end users.
 - Fixed a bug in the wheel which could cause it to return to the team
   selection screen instead of showing a question.


Version 1.2 - Perfectionism
------------------------------

This is the third release of Freevial, which mainly only features some
important bugfixes and little improvements. Below we will highlight the
most important changes.

Improvements:
 - Further reduced CPU usage, saving some more cycles now.
 - If only a name (and not a path) is passed as --skin, and there's no
   directory with that name in the working directory, Freevial will now
   try to find if a skin with that name is installed somewhere.

Bug Fixes:
 - Fixed an evil crash which toke place each time a team won a game.
 - Fixed a crash which happened when there were no more questions left in
   a category whose name contained special characters.
 - Fixed a crash reproducible by pressing 'q' or escape on the end screen
   when the music is disabled.
 - Fixed the installation script to really install all provided skins.


Version 1.1 - Nightshift
------------------------------

This second release of Freevial includes a lot of important changes
including new thrilling features (like skins), bug fixes and huge
coding improvements. Below we will highlight some of those changes,
except the coding related ones as you probably aren't interested in
them.

Important Improvements:
 - Added support for multiple skins.
 - Changed questions format from CVS to XML for more flexibility.

Other Improvements: